--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "^4.2.12",
-    "@mantine/dropzone": "^4.2.12",
-    "@mantine/hooks": "^4.2.12",
-    "@mantine/next": "^4.2.12",
-    "@mantine/notifications": "^4.2.12",
+    "@mantine/core": "^4.1.2",
+    "@mantine/dropzone": "^4.1.2",
+    "@mantine/form": "^4.1.2",
+    "@mantine/hooks": "^4.1.2",
+    "@mantine/next": "^4.1.2",
+    "@mantine/notifications": "^4.1.2",
     "axios": "^0.27.2",
     "next": "12.2.2",
     "react": "18.2.0",
